--- a/demo_web/index.html
+++ b/demo_web/index.html
@@ -14,6 +14,196 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <!-- Navbar -->
+    <div
+      class="navbar"
+      style="
+        transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg)
+          rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+        transform-style: preserve-3d;
+      "
+    >
+      <div class="nav_bar">
+        <div
+          class="nav_block"
+          style="will-change: background; background-color: rgba(0, 0, 0, 0)"
+        >
+          <div class="nav_left">
+            <a href="https://growthschool.io/" class="growth_logo">
+              <img src="images/growth_logo.svg" alt="" />
+            </a>
+            <div class="skills">
+              <div class="dropdown">
+                <div class="dropdown_list dropdown_toggle">
+                  <div>Learn</div>
+                  <img
+                    src="images/arrow-right.svg"
+                    alt=""
+                    class="dropdown_svg"
+                  />
+                </div>
+              </div>
+              <a
+                href="https://home.growthschool.io/b2b"
+                class="nav_link2 is_link1"
+                >Upskill your Team</a
+              ><a
+                href="https://home.growthschool.io/about-us"
+                class="nav_link2 is_link1"
+                >About</a
+              >
+            </div>
+          </div>
+          <div class="nav_right">
+            <a
+              href="https://api.growthschool.io/auth/login"
+              class="nav_link2 is_link"
+              >Login</a
+            >
+            <a
+              href="https://home.growthschool.io/apply-as-mentor"
+              class="nav_link2 is_link"
+              >Apply as Mentor</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- main page -->
+    <section class="main_page">
+      <img
+        src="https://cdn.prod.website-files.com/624629162e6c5c363b391aee/64141ef75b5e4a7edee77268_Graphic.svg"
+        alt=""
+        class="main_page_image"
+      />
+      <div>
+        <div class="page_padding2">
+          <div class="main_page_text_block">
+            <div class="main_page_text_area">
+              <div class="main_head">
+                <h1 class="main_heading1">Become the top 1% in</h1>
+                <h1 class="main_heading1 main_heading2">Marketing</h1>
+              </div>
+              <div class="main_body_text">
+                <div class="body_text">by learning from mentors in</div>
+                <div class="body_text">Marketing</div>
+              </div>
+              <a class="gs-cta2" href="#">
+                <div class="main_button">Explore Programs</div>
+                <img src="images/arrow-right.svg" alt="" />
+              </a>
+            </div>
+            <div class="main_photo_block">
+              <div class="photos">
+                <div class="photo_list">
+                  <div class="header_mentor">
+                    <div class="photo_block"></div>
+                    <div class="main_image">
+                      <img
+                        src="images/extensice3.webp"
+                        alt=""
+                        class="mentor_image main_block"
+                      />
+                    </div>
+                    <div class="extensice_mentor_name">
+                      <div class="parctitioner_name">Manish</div>
+                      <div class="main_image_logo main_page">
+                        <img
+                          src="images/mainlogo1.webp"
+                          alt=""
+                          class="image_logo"
+                        />
+                      </div>
+                  </div>
+                  </div>
+                  <div class="header_mentor">
+                    <div class="photo_block"></div>
+                    <div class="main_image">
+                      <img
+                        src="images/main2.webp"
+                        alt=""
+                        class="mentor_image main_block"
+                      />
+                    </div>
+                    <div class="extensice_mentor_name">
+                      <div class="parctitioner_name">Manish</div>
+                      <div class="main_image_logo main_page">
+                        <img
+                          src="images/mainlogo4.webp"
+                          alt=""
+                          class="image_logo"
+                        />
+                      </div>
+                  </div>
+                  </div>
+                  <div class="header_mentor">
+                    <div class="photo_block"></div>
+                    <div class="main_image">
+                      <img
+                        src="images/extensice6.webp"
+                        alt=""
+                        class="mentor_image main_block"
+                      />
+                    </div>
+                    <div class="extensice_mentor_name">
+                      <div class="parctitioner_name">Manish</div>
+                      <div class="main_image_logo main_page">
+                        <img
+                          src="images/mainlogo5.webp"
+                          alt=""
+                          class="image_logo"
+                        />
+                      </div>
+                  </div>
+                  </div>
+                  <div class="header_mentor">
+                    <div class="photo_block"></div>
+                    <div class="main_image">
+                      <img
+                        src="images/main4.webp"
+                        alt=""
+                        class="mentor_image main_block"
+                      />
+                    </div>
+                    <div class="extensice_mentor_name">
+                      <div class="parctitioner_name">Manish</div>
+                      <div class="main_image_logo main_page">
+                        <img
+                          src="images/mainlogo4.webp"
+                          alt=""
+                          class="image_logo"
+                        />
+                      </div>
+                  </div>
+                  </div>
+                  <div class="header_mentor">
+                    <div class="photo_block"></div>
+                    <div class="main_image">
+                      <img
+                        src="images/main5.webp"
+                        alt=""
+                        class="mentor_image main_block"
+                      />
+                    </div>
+                    <div class="extensice_mentor_name">
+                      <div class="parctitioner_name">Manish</div>
+                      <div class="main_image_logo main_page">
+                        <img
+                          src="images/mainlogo5.webp"
+                          alt=""
+                          class="image_logo"
+                        />
+                      </div>
+                  </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          <div></div>
+        </div>
+      </div>
+      <div class="main_page_gradient"></div>
+    </section>
      <!-- stat Section -->
      <div class="stat_section">
       <div class="page_padding2">
