--- a/demo_web/index2.html
+++ b/demo_web/index2.html
@@ -13,5 +13,61 @@
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- Navbar -->
+    <div
+      class="navbar"
+      style="
+        transform: translate3d(0px, 0%, 0px) scale3d(1, 1, 1) rotateX(0deg)
+          rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
+        transform-style: preserve-3d;
+      "
+    >
+      <div class="nav_bar">
+        <div
+          class="nav_block"
+          style="will-change: background; background-color: rgba(0, 0, 0, 0)"
+        >
+          <div class="nav_left">
+            <a href="https://growthschool.io/" class="growth_logo">
+              <img src="images/growth_logo.svg" alt="" />
+            </a>
+            <div class="skills">
+              <div class="dropdown">
+                <div class="dropdown_list dropdown_toggle">
+                  <div>Learn</div>
+                  <img
+                    src="images/arrow-right.svg"
+                    alt=""
+                    class="dropdown_svg"
+                  />
+                </div>
+              </div>
+              <a
+                href="https://home.growthschool.io/b2b"
+                class="nav_link2 is_link1"
+                >Upskill your Team</a
+              ><a
+                href="https://home.growthschool.io/about-us"
+                class="nav_link2 is_link1"
+                >About</a
+              >
+            </div>
+          </div>
+          <div class="nav_right">
+            <a
+              href="https://api.growthschool.io/auth/login"
+              class="nav_link2 is_link"
+              >Login</a
+            >
+            <a
+              href="https://home.growthschool.io/apply-as-mentor"
+              class="nav_link2 is_link"
+              >Apply as Mentor</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
